# collector-web

./: .gitignore  CMakeLists.txt  README.md
data/: build_perf_data.json  perf_data.json
src/: Collector.main.cpp  HyperlinkHelper.cpp  HyperlinkHelper.h  ImGuiExt.cpp  ImGuiExt.h  MarkdownHelper.cpp  MarkdownHelper.h
tools/: emcmake  genjsonc.java  server.java
